--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "15.6.1",
     "react-fontawesome": "^1.6.1",
     "react-particles-js": "^1.5.0",
+    "react-router-dom": "4.2.2",
     "react-scroll-up": "^1.3.1"
   },
   "devDependencies": {
